<resources>
    <string name="app_name">Rachel - CofeeApp 02</string>
    <string name="name_field"></string>
    <string name="toppings">Toppings</string>
    <string name="title">Your Order Details</string>
    <string name="diplayMessage"></string>
    <string name="emailButton">SEND EMAIL</string>
    <string name="save">Save Data</string>
    <string name="report">Save Report</string>
    <string name="reorder">Reorder</string>
</resources>